<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AC-Remote</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="tempdown">Temp -</string>
    <string name="tempup">Temp +</string>
    <string name="timer">Timer +</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="zero">0</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_about_settings">About</string>
    <string name="fan">Fan</string>
    <string name="timer1">Timer -</string>
    <string name="mode">Mode</string> 
</resources>
