<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/and"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ToggleButton
        android:id="@+id/toggleButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="197dp"
        android:onClick="OnClickBtn"
        android:text="@string/togglebutton" />

    <Button
        android:id="@+id/butn_fan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/toggleButton1"
        android:layout_alignBottom="@+id/toggleButton1"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:enabled="false"
        android:onClick="OnClickBtn"
        android:text="@string/fan" />

    <Button
        android:id="@+id/button_tempup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toggleButton1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:onClick="OnClickBtn"
        android:text="@string/tempup" />

    <Button
        android:id="@+id/button_timerplus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/butn_fan"
        android:layout_alignRight="@+id/butn_fan"
        android:layout_below="@+id/button_tempup"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="18dp"
        android:enabled="false"
        android:onClick="OnClickBtn"
        android:text="@string/timer" />

    <Button
        android:id="@+id/timerminus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_timerplus"
        android:layout_alignBottom="@+id/button_timerplus"
        android:layout_alignLeft="@+id/toggleButton1"
        android:layout_alignStart="@+id/toggleButton1"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:enabled="false"
        android:onClick="OnClickBtn"
        android:text="@string/timer1" />

    <Button
        android:id="@+id/button_tempdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_tempup"
        android:layout_alignStart="@+id/button_tempup"
        android:layout_below="@+id/timerminus"
        android:layout_marginTop="19dp"
        android:enabled="false"
        android:onClick="OnClickBtn"
        android:text="@string/tempdown" />

    <Button
        android:id="@+id/button_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_tempdown"
        android:layout_alignLeft="@+id/button_tempdown"
        android:layout_alignStart="@+id/button_tempdown"
        android:enabled="false"
        android:onClick="OnClickBtn"
        android:text="@string/mode" />

    <TextView
        android:id="@+id/texttemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/timerminus"
        android:layout_alignStart="@+id/timerminus"
        android:layout_alignParentTop="true"
        android:layout_marginTop="27dp"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff"
        android:textSize="33sp" 
         android:visibility="invisible"/>

    <TextView
        android:id="@+id/texthumidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/texttemperature"
        android:layout_alignStart="@+id/texttemperature"
        android:layout_below="@+id/texttemperature"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff"
        android:textSize="33sp" 
        android:layout_marginTop="17dp"
         android:visibility="invisible"/>

    <TextView
        android:id="@+id/textfanspeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/texthumidity"
        android:layout_alignStart="@+id/texthumidity"
        android:layout_below="@+id/texthumidity"
        android:layout_marginTop="13dp"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff"
        android:textSize="33sp" 
         android:visibility="invisible"/>

     <TextView
         android:id="@+id/texttimer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/textfanspeed"
         android:layout_alignStart="@+id/textfanspeed"
         android:layout_below="@+id/textfanspeed"
         android:layout_marginTop="13dp"
         android:text="Large Text"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="#ffffff"
         android:textSize="33sp" 
          android:visibility="invisible"/>

      <TextView
          android:id="@+id/textTimer"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="157dp"
          android:layout_marginRight="0dp"
          android:layout_marginStart="220dp"
          android:layout_marginLeft="127dp"
          android:clickable="false"
          android:duplicateParentState="false"
          android:gravity="center"
          android:longClickable="false"
          android:text=" "
          android:textAlignment="center"
          android:textAppearance="?android:attr/textAppearanceLarge"
          android:textColor="#ffffff"
          android:textSize="38sp" />

     <TextView
         android:id="@+id/textFan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="276dp"
         android:layout_marginLeft="276dp"
         android:layout_marginTop="110dp"
         android:clickable="false"
         android:duplicateParentState="false"
         android:gravity="center"
         android:longClickable="false"
         android:text=" "
         android:textAlignment="center"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="#ffffff"
         android:textSize="45sp"
        android:visibility="invisible" />

      <TextView
          android:id="@+id/texttemp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="25dp"
          android:layout_marginRight="0dp"
          android:layout_marginEnd="0dp"
          android:layout_marginStart="220dp"
          android:layout_marginLeft="247dp"
          android:clickable="false"
          android:duplicateParentState="false"
          android:gravity="center"
          android:longClickable="false"
          android:text=" "
          android:textAlignment="center"
          android:textAppearance="?android:attr/textAppearanceLarge"
          android:textColor="#ffffff"
          android:textSize="38sp" />
       <TextView
          android:id="@+id/texthumy"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
         android:layout_marginTop="70dp"
          android:layout_marginRight="0dp"
          android:layout_marginEnd="0dp"
          android:layout_marginStart="220dp"
          android:layout_marginLeft="247dp"
          android:clickable="false"
          android:duplicateParentState="false"
          android:gravity="center"
          android:longClickable="false"
          android:text=" "
          android:textAlignment="center"
          android:textAppearance="?android:attr/textAppearanceLarge"
          android:textColor="#ffffff"
          android:textSize="38sp" />
        <TextView
          android:id="@+id/textmode"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="157dp"
          android:layout_marginRight="0dp"
          android:layout_marginEnd="0dp"
          android:layout_marginStart="278dp"
          android:layout_marginLeft="278dp"
          android:clickable="false"
          android:duplicateParentState="false"
          android:gravity="center"
          android:longClickable="false"
          android:text=" "
          android:textAlignment="center"
          android:textAppearance="?android:attr/textAppearanceLarge"
          android:textColor="#ffffff"
          android:textSize="38sp" />

        <TextView
            android:id="@+id/textmode1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="157dp"
          	android:layout_marginRight="-70dp"
          	android:layout_marginEnd="-70dp"
          	android:layout_marginStart="175dp"
          	android:layout_marginLeft="175dp"
            android:text="Large Text"
            android:textColor="#ffffff"
          	android:textSize="38sp"
          	android:visibility="invisible"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
</RelativeLayout>